--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.4",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
         "predis/predis": "^2.3",
