--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "dedoc/scramble": "^0.12.8",
         "laravel/breeze": "^2.3",
         "laravel/framework": "^11.31",
         "laravel/reverb": "^1.4",
